# Plan-Shop-Eat

./: LICENSE  README.md  pyproject.toml
authentication/: forms.py  urls.py  views.py
config/: settings.py  urls.py
custom_user_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
custom_user_app/migrations/: 0001_initial.py  0002_customuser_isdarkmode.py
error_handling/: apps.py  urls.py  views.py
meal_plan_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
meal_plan_app/migrations/: 0001_initial.py  0002_mealplan_plan_title.py  0002_remove_mealplan_meal_day.py
recipe_app/: admin.py  forms.py  models.py  urls.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20211006_1608.py  0003_review.py  0004_rename_measurement_ingredient_unit.py  0005_auto_20211006_1752.py  0006_auto_20211006_1753.py  0007_recipe_recipe_image.py  0008_alter_recipe_recipe_image.py  0009_recipe_recipe_description.py  0010_auto_20211014_0054.py  0011_rename_instruction_recipe_instructions.py  0012_delete_ingredient.py
shopping_list_app/: admin.py  apps.py  models.py  urls.py  views.py
shopping_list_app/migrations/: 0001_initial.py  0002_shoppinglist_created_at.py  0003_rename_ingredient_shoppinglist_ingredients.py  0004_delete_shoppinglist.py
static/styles/: button_color.css  default.css  generic_form.css  (+1 more)
templates/: base.html  error_404.html  error_500.html  generic_form.html  index.html  landing_page.html  meal_plan.html  meal_plans.html  plans.html  recipe.html  recipes.html  shopping_list.html  shopping_lists.html  user_profile.html
