[tool.poetry]
name = "plan-shop-eat"
version = "0.1.0"
description = ""
authors = ["Joel Rice, Casey Mockbee, Nima Weatherly, Megan Dimond, Pete Zamora"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
